--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "Mastu62",
+	"description": "A guided project for learning about package.json.",
+	"keywords": [
+		"freecodecamp",
+		"guide",
+		"tutorial",
+		"npm",
+		"package.json"
+	],
+	"license": "MIT",
+	"version": "1.0.0",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
